sfdxsrc/errorHandling/objects/System_Event__c/System_Event__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store All the events happening inside our app exchange application.</description>
    <label>System Event</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>System Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>