sfdxsrc/errorHandling/objects/System_Event__c/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <description>Provide the email list comma-separated if there are multiple emails.</description>
    <inlineHelpText>Provide the email list comma-separated if there are multiple emails.</inlineHelpText>
    <label>Additional Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>