sfdxsrc/errorHandling/objects/System_Event__c/fields/Email_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_DateTime__c</fullName>
    <inlineHelpText>The Timestamp when the email was sent</inlineHelpText>
    <label>Email Sent DateTime</label>
    <type>DateTime</type>
</CustomField>