sfdxsrc/errorHandling/objects/System_Event__c/fields/Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_DateTime__c</fullName>
    <inlineHelpText>Holds the time stamp when the log was generated.</inlineHelpText>
    <label>Event Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>