sfdxsrc/errorHandling/objects/System_Event__c/fields/Event_Level__c.field-meta.xml
<CustomField>
    <fullName>Event_Level__c</fullName>
    <description>The status of System Event Log.</description>
    <inlineHelpText>The status of System Event Log.</inlineHelpText>
    <label>Event Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Success Warning</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
                <isActive>false</isActive>
                <label>Exception</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>