sfdxsrc/errorHandling/objects/System_Event__c/fields/External_System_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>External_System_Error_Code__c</fullName>
    <inlineHelpText>When an External System or Service is providing an Error code use this field to fill that Error Code.</inlineHelpText>
    <label>External System Error Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>