sfdxsrc/errorHandling/objects/System_Event__c/fields/ExternalSystemDocument__c.field-meta.xml
<CustomField>
    <fullName>ExternalSystemDocument__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <inlineHelpText>Link to External System Document if Applicable otherwise lease as blank</inlineHelpText>
    <label>External System Documents</label>
    <type>Url</type>
</CustomField>