sfdxsrc/errorHandling/objects/System_Event__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The Short message about the process of the System Event is created</description>
    <inlineHelpText>The Short message about the process of the System Event is created</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>