sfdxsrc/errorHandling/objects/System_Event__c/fields/Message_Rich_Text_02__c.field-meta.xml
<CustomField>
    <fullName>Message_Rich_Text_02__c</fullName>
    <description>A rich-text message describing the nature of this event. This rich-text message can include HTML formatting, hyperlinks, etc.</description>
    <inlineHelpText>A rich-text message describing the nature of this event. This rich-text message can include HTML formatting, hyperlinks, etc.</inlineHelpText>
    <label>Message Rich Text 02</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>