sfdxsrc/errorHandling/objects/System_Event__c/fields/Message_Rich_Text_03__c.field-meta.xml
<CustomField>
    <fullName>Message_Rich_Text_03__c</fullName>
    <inlineHelpText>The additional set of messages if required.</inlineHelpText>
    <label>Message Rich Text 03</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>