sfdxsrc/errorHandling/objects/System_Event__c/fields/Message_Rich_Text_04__c.field-meta.xml
<CustomField>
    <fullName>Message_Rich_Text_04__c</fullName>
    <label>Message Rich Text 04</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>