sfdxsrc/errorHandling/objects/System_Event__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>The assigned profile to the user.</description>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The assigned profile to the user.</inlineHelpText>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>