sfdxsrc/errorHandling/objects/System_Event__c/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <description>User profile Id who created the System Event Record.</description>
    <formula>$Profile.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User profile Id who created the System Event Record.</inlineHelpText>
    <label>ProfileId</label>
    <type>Text</type>
</CustomField>