sfdxsrc/errorHandling/objects/System_Event__c/fields/Public_Group_Membership__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Membership__c</fullName>
    <inlineHelpText>The list of all the public groups, that are associated with the user who has created the System Event Record.</inlineHelpText>
    <label>Public Group Membership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>