sfdxsrc/errorHandling/objects/System_Event__c/fields/Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Public_Groups__c</fullName>
    <label>Public Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>