sfdxsrc/errorHandling/objects/System_Event__c/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <inlineHelpText>The Solution Approach and the short detail about the Resolution of the problem ( System Event Record )</inlineHelpText>
    <label>Resolution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>