sfdxsrc/errorHandling/objects/System_Event__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <formula>User__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserName</label>
    <type>Text</type>
</CustomField>