sfdxsrc/errorHandling/objects/System_Event__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <formula>$UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserRole</label>
    <type>Text</type>
</CustomField>